fixed text alignment of See Photos button

--- a/react-app/src/components/business/business.css
+++ b/react-app/src/components/business/business.css
@@ -81,6 +81,7 @@
   height: 48px;
   font-size: 16px;
   font-weight: 500;
+  line-height: 24px;
 }
 
 .businessButton {
